Popup Layout weiter gemacht

--- a/app/assets/stylesheets/bootstrap-theme.less
+++ b/app/assets/stylesheets/bootstrap-theme.less
@@ -17,8 +17,8 @@
 @btn-primary-color:#fff;
 @btn-primary-bg:#275980;
 @btn-primary-border:#275980;
-@btn-primary-bg-hover:#275980;
-@btn-primary-border-hover:#275980;
+@btn-primary-bg-hover:#4f7ca5;
+@btn-primary-border-hover:#4f7ca5;
 
 
 
@@ -80,6 +80,11 @@ a {color:@color-blue;}
 		background-color:@btn-primary-bg-hover;
 		border-color:@btn-primary-border-hover;
 	}
+}
+
+.modal-dialog {
+	max-width:1170px;
+	width:auto;
 }
 
 
