--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,14 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>@title</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))">
 	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("nv.d3.css"))" >
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
 	<script type="text/javascript" data-main="@routes.Assets.at("javascripts/app.js")" src="@routes.WebJarAssets.requirejs"></script>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
