make dashboard active

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -113,13 +113,15 @@ th {
 		background-image:url("/assets/images/icons/sorting.gif");
 		cursor:pointer;
 	}
-	&.sorting-up {
+	&.sorting-up, &.sorting_asc {
 		background-image:url("/assets/images/icons/sorting-up.gif");
 	}
-	&.sorting-down {
+	&.sorting-down, &.sorting_desc {
 		background-image:url("/assets/images/icons/sorting-down.gif");
 	}
 	&.sorting,
+	&.sorting_asc,
+	&.sorting_desc,
 	&.sorting-up,
 	&.sorting-down {
 		background-position:right center;
