--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -38,7 +38,7 @@
 						<div class="form-group well-fix">
 							<label for="selectDate" class="col-sm-2 control-label">Dates</label>
 							<div class="col-sm-10">
-								<select class="form-control" data-bind="options: availableDateRanges, value: dateRange" id="selectDate">
+								<select class="form-control" data-bind="options: chartdaterange.availableDateRanges, value: chartdaterange.dateRange" id="selectDate">
 								</select>
 							</div>
 						</div>
@@ -52,7 +52,7 @@
 									<div class="form-group m-null">
 										<label for="selectDateFrom" class="col-sm-2 control-label">From</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: formattedStartDate" id="selectDateFrom" name="start">
+											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedStartDate" id="selectDateFrom" name="start">
 											</input>
 										</div>
 									</div>
@@ -63,7 +63,7 @@
 									<div class="form-group m-null">
 										<label for="selectDateTo" class="col-sm-2 control-label">To</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: formattedEndDate" id="selectDateTo" name="end">
+											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedEndDate" id="selectDateTo" name="end">
 											</input>
 										</div>
 									</div>
@@ -98,20 +98,15 @@
 			<div class="col-md-9">
 				<div class="row">
 					<div class="col-xs-6">
-						<select class="form-control">
-							<option>Status 1</option>
-							<option>Status 2</option>
-							<option>Status 3</option>
-							<option>Status 4</option>
-							<option>Status 5</option>
+						<select class="form-control" data-bind="options: datatablesearchbar.availableCategories, value: datatablesearchbar.category">
 						</select>
 					</div>
 					<div class="col-xs-6">
 						<form role="search">
 							<div class="input-group">
-								<input type="text" class="form-control">
+								<input type="text" data-bind="value: datatablesearchbar.query" class="form-control">
 								<span class="input-group-btn">
-									<button class="btn btn-primary" type="button">Search</button>
+									<button class="btn btn-primary" data-bind="click: datatablesearchbar.search" type="button">Search</button>
 								</span>
 							</div>
 						</form>
@@ -119,129 +114,59 @@
 				</div>
 				<div class="row">
 					<div class="col-xs-6">
-						<p class="pagination-fix"><strong>Displaying: 1 - 20 of 141</strong></p>
+						<p class="pagination-fix"><strong class="pagination-text">Displaying: 1 - 20 of 141</strong></p>
 					</div>
 					<div class="col-xs-6">
 						<ul class="pagination pagination-sm pull-right">
-							<li class="disabled"><a href="#">&laquo;</a></li>
-							<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li><a href="#">&raquo;</a></li>
+							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.previous">&laquo;</a></li>
+							<li data-bind="foreach: datatablescroller.visiblePages">
+							<!--  ko if: active -->
+							<a class="active" href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<!--  /ko -->
+							<!--  ko ifnot: active -->
+							<a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<!--  /ko -->
+							</li>
+							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.next">&raquo;</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						<div class="table-responsive">
-							<table class="table table-striped table-bordered m-null">
-								<tr>
-									<th class="sorting">Name</th>
-									<th class="sorting">Status</th>
-									<th class="sorting-up">Revenue</th>
-									<th class="sorting">Cost</th>
-									<th class="sorting">Start</th>
-									<th class="sorting-down">End</th>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
-								<tr>
-									<td>Leads Con Web Retargeting</td>
-									<td>11,83 %</td>
-									<td>$534,76</td>
-									<td>$4,35</td>
-									<td>7/19/2013</td>
-									<td>8/09/2013</td>
-								</tr>
+							<table class="table table-striped table-bordered m-null data-table">
+							    <thead>
+									<tr>
+										<th class="sorting">Name</th>
+										<th class="sorting">Status</th>
+										<th class="sorting">Revenue</th>
+										<th class="sorting">Cost</th>
+										<th class="sorting">Start</th>
+										<th class="sorting">End</th>
+									</tr>
+								</thead>
+								<tbody>
+								</tbody>
 							</table>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-xs-6">
-						<p class="pagination-fix"><strong>Displaying: 1 - 20 of 141</strong></p>
+						<p class="pagination-fix"><strong class="pagination-text">Displaying: 1 - 20 of 141</strong></p>
 					</div>
 					<div class="col-xs-6">
 						<ul class="pagination pagination-sm pull-right">
-							<li class="disabled"><a href="#">&laquo;</a></li>
-							<li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li><a href="#">&raquo;</a></li>
+							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.previous">&laquo;</a></li>
+							<li data-bind="foreach: datatablescroller.visiblePages">
+							<!--  ko if: active -->
+							<a class="active" href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<!--  /ko -->
+							<!--  ko ifnot: active -->
+							<a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<!--  /ko -->
+							</li>
+							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.next">&raquo;</a></li>
 						</ul>
 					</div>
 				</div>
