--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -18,17 +18,17 @@
 			<div class="row legends">
 				<div class="col-sm-4">
 					<div class="legend-revenu">
-						<span></span> $5000 Revenue
+						<span></span> $<span data-bind="text: chartdata.sum0"></span> Revenue
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-ad-spent">
-						<span></span> $5000 Ad spend
+						<span></span> $<span data-bind="text: chartdata.sum1"></span> Ad spend
 					</div>
 				</div>
 				<div class="col-sm-4">
 					<div class="legend-profit">
-						<span></span> $3300 Profit
+						<span></span> $<span data-bind="text: chartdata.sum2"></span> Profit
 					</div>
 				</div>
 			</div>
