--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -1,5 +1,5 @@
 @(admins: Seq[Admin], current: Admin)
-@main("Admins") {
+@templates.main("Admins") {
 @menu.admin("Admins")
 @menu.logout(current)
 } {
