--- a/app/views/audiences.scala.html
+++ b/app/views/audiences.scala.html
@@ -1,5 +1,5 @@
 @(audiences: Seq[Audience], current: Admin)
-@main("Audiences") {
+@templates.main("Audiences") {
 @menu.admin("Audiences")
 @menu.logout(current)
 } {
