--- a/app/views/publishers.scala.html
+++ b/app/views/publishers.scala.html
@@ -1,5 +1,5 @@
 @(publishers: Seq[Publisher], current: Admin)
-@main("Publishers") {
+@templates.main("Publishers") {
 @menu.admin("Publishers")
 @menu.logout(current)
 } {
