--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -1,5 +1,5 @@
 @(publishers: Seq[Publisher], current: Admin)
-@main("Dashboard") {
+@templates.main("Dashboard") {
 @menu.admin("Dashboard")
 @menu.logout(current)
 <script type="text/javascript" data-main="@routes.Assets.at("javascripts/dashboard.js")" src="@routes.WebJarAssets.requirejs"></script>
@@ -104,7 +104,7 @@
 					<div class="col-xs-6">
 						<form role="search">
 							<div class="input-group">
-								<input type="text" data-bind="value: datatablesearchbar.query" class="form-control">
+								<input type="text" data-bind="value: datatablesearchbar.query" placeholder="Search ..." class="form-control">
 								<span class="input-group-btn">
 									<button class="btn btn-primary" data-bind="click: datatablesearchbar.search" type="button">Search</button>
 								</span>
@@ -119,14 +119,14 @@
 					<div class="col-xs-6">
 						<ul class="pagination pagination-sm pull-right">
 							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.previous">&laquo;</a></li>
-							<li data-bind="foreach: datatablescroller.visiblePages">
+							<!--  ko foreach: datatablescroller.visiblePages -->
 							<!--  ko if: active -->
-							<a class="active" href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<li class="active"><a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a></li>
 							<!--  /ko -->
 							<!--  ko ifnot: active -->
-							<a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<li><a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a></li>
 							<!--  /ko -->
-							</li>
+							<!--  /ko -->
 							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.next">&raquo;</a></li>
 						</ul>
 					</div>
@@ -158,14 +158,14 @@
 					<div class="col-xs-6">
 						<ul class="pagination pagination-sm pull-right">
 							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.previous">&laquo;</a></li>
-							<li data-bind="foreach: datatablescroller.visiblePages">
+							<!--  ko foreach: datatablescroller.visiblePages -->
 							<!--  ko if: active -->
-							<a class="active" href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<li class="active"><a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a></li>
 							<!--  /ko -->
 							<!--  ko ifnot: active -->
-							<a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a>
+							<li><a href="javascript:void(0)" data-bind="click: $parent.datatablescroller.gotoPage, text: page"></a></li>
 							<!--  /ko -->
-							</li>
+							<!--  /ko -->
 							<li><a href="javascript:void(0)" data-bind="click: datatablescroller.next">&raquo;</a></li>
 						</ul>
 					</div>
