--- a/app/views/templates/main.scala.html
+++ b/app/views/templates/main.scala.html
@@ -23,7 +23,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Audience Extender</a>
+			<a class="navbar-brand" href="@routes.MainController.dashboard">Audience Extender</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
@@ -37,9 +37,9 @@
 	<div class="container">
 		<footer>
 			<p>
-				<a href="#">Contact</a>
-				<a href="#">Privacy Policy</a>
-				<a href="#">Terms of Service</a>
+				<a href="@routes.MainController.contact">Contact</a>
+				<a href="@routes.MainController.policy">Privacy Policy</a>
+				<a href="@routes.MainController.tos">Terms of Service</a>
 			</p>
 			&copy; Copyright 2013 - Audience Extender LLC
 		</footer>
