--- a/app/assets/stylesheets/bootstrap-theme.less
+++ b/app/assets/stylesheets/bootstrap-theme.less
@@ -37,13 +37,13 @@ a {color:@color-blue;}
 }
 
 //thead colors
-.table-striped > tbody > tr:nth-child(2n+1) > th {
+.table-striped > thead > tr:nth-child(2n+1) > th {
 	background-color:#818181;
 	color:#fff;
 }
-.table-striped > tbody > tr:nth-child(2n+1) > th:hover,
-.table-striped > tbody > tr:nth-child(2n+1) > th.sorting-up,
-.table-striped > tbody > tr:nth-child(2n+1) > th.sorting-down {
+.table-striped > thead > tr:nth-child(2n+1) > th:hover,
+.table-striped > thead > tr:nth-child(2n+1) > th.sorting_asc,
+.table-striped > thead > tr:nth-child(2n+1) > th.sorting_desc {
 	background-color:#275980;
 }
 
