fix contact page

--- a/app/views/contact.scala.html
+++ b/app/views/contact.scala.html
@@ -10,8 +10,8 @@
 <div class="alert alert-success">@message</div>
 }
 <input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
-<input type="text" autofocus="" placeholder="Name" class="form-control" id="email" name="name" value="@form("name").value">
-<textarea placeholder="Message" required="" class="form-control" id="message" name="name">@form("message").value</textarea>
+<input type="text" autofocus="" placeholder="Name" class="form-control" id="name" name="name" value="@form("name").value">
+<textarea placeholder="Message" required="" class="form-control" id="msg" name="msg">@form("msg").value</textarea>
 <button type="submit" class="btn btn-lg btn-primary btn-block" id="sendbutton">Send Message</button>
 }
 }
