--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -162,6 +162,38 @@ th {
 		font-size:18px;
 	}
 }
+.scroll-buttons {
+	bottom:20px;
+	height:70px;
+	line-height:30px;
+	position:fixed;
+	right:20px;
+	width:30px;
+	z-index:1000;
+	div {
+		height:30px;
+		margin-top:5px;
+		width:30px;
+	}
+	a {
+		background:#222;
+		color:#fff;
+		cursor:pointer;
+		display:block;
+		height:30px;
+		line-height:30px;
+		text-align:center;
+		width:30px;
+		visibility:hidden;
+		.rounded-corners;
+		&:hover {
+			background:#444;
+		}
+		span {
+			line-height:27px;
+		}
+	}
+}
 //end of frontend
 
 
@@ -287,30 +319,4 @@ nav.loginbar {
 .dashboard svg {
 	height:300px;
 	margin-top:15px;
-}
-
-div.scroll-buttons {
-	position: fixed;
-	z-index: 1000;
-	bottom: 20px;
-	right: 20px;
-	height: 95px;
-	width: 50px;
-}
-
-div.scroll-buttons div {
-	width: 40px;
-	margin: 5px;
-	height: 40px;
-}
-
-div.scroll-buttons a {
-	display: block;
-	visibility: hidden;
-	width: 40px;
-	height: 40px;
-	border: 1px solid #555;
-	border-radius: 10px;
-	padding: 11px;
-	background: #333;
 }
