HTML Validation fixed

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -265,14 +265,14 @@ th {
 	padding-left:15px;
 	position:relative;
 	text-align:left;
-	div {
+	span:first-child {
 		border-right:2px solid #fff;
 		position:absolute;
 		left:48px;
 		top:-1px;
 		height:46px;
 	}
-	span {
+	.glyphicon {
 		padding-right:45px;
 	}
 }
