--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -185,16 +185,16 @@
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><div></div><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><div></div><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> AD Packages</button>
 				</p>
 				<!--
 				<article class="publishers">
@@ -266,10 +266,10 @@
 						<div class="col-md-12">
 							<div class="btn-group" data-toggle="buttons">
 								<label class="btn btn-primary">
-									<input type="radio" name="options" id="option1"> On
+									<input type="radio" name="options" id="option3"> On
 								</label>
 								<label class="btn btn-primary active">
-									<input type="radio" name="options" id="option2"> Off
+									<input type="radio" name="options" id="option4"> Off
 								</label>
 							</div>
 							/terms
