contact form changed

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -73,6 +73,10 @@ html,body {
 	font-family:@font2;
 }
 
+h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
+	font-family:@font1;
+}
+
 .m-null {margin:0}
 .p-null {padding:0}
 .pagination-fix {margin:20px 0;padding:5px 0;}
@@ -319,9 +323,4 @@ nav.loginbar {
 .dashboard svg {
 	height:300px;
 	margin-top:15px;
-}
-
-.form-contact {
-	margin:20px;
-	max-width:600px;
 }
