--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -4,14 +4,27 @@
 @menu.logout(current)
 } {
 <div class="container">
-	<article class="admins">
-		@admins.map {
-			case admin => {
-				<div class="admin">
-					<h2>@admin.email</h2>
-				</div>
-			}
-		}
+	<div class="row">
+		<div class="col-md-9">
+			<div class="row">
+			</div>
+			<div class="row">
+				@admins.map {
+					case admin => {
+						<div class="admin">
+							<h2>@admin.email</h2>
+						</div>
+					}
+				}
+			</div>
+			<div class="row">
+			</div>
+		</div>
+		<div class="col-md-3">
+			<p>
+				<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><div></div><span class="glyphicon glyphicon-plus-sign"></span> New Admin</button>
+			</p>
+		</div>
 	</article>
 </div>
 }
