panel heading css changed

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -298,13 +298,12 @@
 					</div>
 					-->
 				</div>
-
-				<div class="panel-group" id="accordion">
+				<div class="panel-group" id="accordion-example-plus">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4 class="panel-title">
-								<a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
-									3rd Party Tracking
+								<a data-toggle="collapse" data-parent="#accordion-example-plus" href="#collapseOne" class="collapsed">
+									3rd Party Tracking <span class="glyphicon"></span>
 								</a>
 							</h4>
 						</div>
