--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -12,26 +12,33 @@
 	<input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
 	<input type="password" required="" placeholder="Password" class="form-control" id="password" name="password">
 	<button type="submit" class="btn btn-lg btn-primary btn-block" id="loginbutton">Sign in</button>
-    <a href="#" data-toggle="modal" data-target="#forgottenPassword">Password forgotten</a>
+	<p>
+		<a href="#" data-toggle="modal" data-target="#forgottenPassword">Password forgotten</a>
+	</p>
 }
 <div class="modal fade" id="forgottenPassword" tabindex="-1" role="dialog" aria-labelledby="Forgot password" aria-hidden="true">
-    <div class="modal-dialog">
+	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				<h4 class="modal-title">Forgot password</h4>
 			</div>
-@helper.form(routes.MainController.forgotPassword) {
 			<div class="modal-body">
-				<p>
-                    <input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
-					<input type="hidden" id="name" name="name">
-				</p>
-			</div>
-			<div class="modal-footer">
-				<button type="submit" class="btn btn-primary btn-default">Request password reset link</button>
-			</div>
+@helper.form(routes.MainController.forgotPassword, 'class -> "form-horizontal") {
+				<div class="form-group">
+					<label for="email" class="col-sm-2 control-label">Email</label>
+					<div class="col-sm-10">
+						<input type="email" autofocus="" required="" placeholder="Email" class="form-control" id="email" name="email" value="@form("email").value">
+						<input type="hidden" id="name" name="name">
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="col-sm-offset-2 col-sm-10">
+						<button type="submit" class="btn btn-primary btn-default">Request password reset link</button>
+					</div>
+				</div>
 }
+			</div>
 		</div>
 	</div>
 </div>
