panel heading fix

--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -287,7 +287,7 @@
 				</div>
 				<div class="panel-group" id="accordion-example-plus">
 					<div class="panel panel-default">
-						<div class="panel-heading">
+						<div class="panel-heading link">
 							<h4 class="panel-title">
 								<a data-toggle="collapse" data-parent="#accordion-example-plus" href="#collapseOne" class="collapsed">
 									3rd Party Tracking <span class="glyphicon"></span>
