--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -82,6 +82,30 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 {
 .pagination-fix {margin:20px 0;padding:5px 0;}
 .well-fix {margin-top:10px;}
 
+//panel heading umstyling
+.panel-heading.link {
+	padding:0;
+	a {
+		display:block;
+		padding:10px 15px;
+		&:hover,
+		&:focus {
+			background:#eee;
+			text-decoration:none;
+		}
+	}
+	span {
+		float:right;
+		&:before {
+			content:"−";
+		}
+	}
+	a.collapsed {
+		span:before {
+			content:"+";
+		}
+	}
+}
 
 .header {
 	background:#1c5078 url("/assets/images/bg-header.jpg") no-repeat top center;
