--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -52,8 +52,7 @@
 									<div class="form-group m-null">
 										<label for="selectDateFrom" class="col-sm-2 control-label">From</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedStartDate" id="selectDateFrom" name="start">
-											</input>
+											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedStartDate" id="selectDateFrom" name="start"/>
 										</div>
 									</div>
 								</form>
@@ -63,8 +62,7 @@
 									<div class="form-group m-null">
 										<label for="selectDateTo" class="col-sm-2 control-label">To</label>
 										<div class="col-sm-10">
-											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedEndDate" id="selectDateTo" name="end">
-											</input>
+											<input class="form-control date-picker" data-bind="value: chartdaterange.formattedEndDate" id="selectDateTo" name="end"/>
 										</div>
 									</div>
 								</form>
