--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -202,10 +202,10 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Audience</h4>
+				<h4 class="modal-title">New/Edit Audience: <span data-bind="text: currentaudience.name"></span></h4>
 			</div>
 			<div class="modal-body">
-				<p><a href="#" id="audiencename" data-type="text" data-pk="1" data-url="/post" data-title="Enter Audience Name">Audience Name</a></p>
+				<p><a href="#" id="audiencename" data-bind="editable: currentaudience.name" data-type="text" data-pk="1" data-title="Enter Audience Name">Audience Name</a></p>
 				<h3>Select Website</h3>
 				<div class="box-strips">
 					<div class="row">
