--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -183,10 +183,10 @@
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
@@ -236,7 +236,7 @@
 					<h3>Path targeting</h3>
 					<div class="row">
 						<div class="col-md-12">
-							<div class="btn-group" data-toggle="buttons">
+							<div class="btn-group btn-group-first" data-toggle="buttons">
 								<label class="btn btn-primary">
 									<input type="radio" name="options" id="option1"> On
 								</label>
@@ -249,7 +249,7 @@
 					</div>
 					<div class="row">
 						<div class="col-md-12">
-							<div class="btn-group" data-toggle="buttons">
+							<div class="btn-group btn-group-middle" data-toggle="buttons">
 								<label class="btn btn-primary">
 									<input type="radio" name="options" id="option3"> On
 								</label>
@@ -260,6 +260,31 @@
 							/terms
 						</div>
 					</div>
+					<div class="row">
+						<div class="col-md-12">
+							<div class="btn-group btn-group-last" data-toggle="buttons">
+								<label class="btn btn-primary">
+									<input type="radio" name="options" id="option9"> On
+								</label>
+								<label class="btn btn-primary active">
+									<input type="radio" name="options" id="option10"> Off
+								</label>
+							</div>
+							/contact
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-6">
+							<div class="input-group">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus-sign"> Add new path</button>
+								</span>
+								<input type="text" class="form-control">
+							</div>
+						</div>
+					</div>
+
+
 					<!--
 					<div class="row">
 						<div class="col-md-2 text-center">
