--- a/app/views/dashboard.scala.html
+++ b/app/views/dashboard.scala.html
@@ -277,7 +277,7 @@
 						<div class="col-lg-6">
 							<div class="input-group">
 								<span class="input-group-btn">
-									<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus-sign"> Add new path</button>
+									<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-plus-sign"></span> Add new path</button>
 								</span>
 								<input type="text" class="form-control">
 							</div>
