--- a/app/views/menu/public.scala.html
+++ b/app/views/menu/public.scala.html
@@ -3,7 +3,7 @@
 	<li class="dropdown">
 		<a data-toggle="dropdown" class="dropdown-toggle" href="#"><span class="glyphicon glyphicon-user"></span> My Account <b class="caret"></b></a>
 		<ul class="dropdown-menu">
-			<li><a href="@routes.AdminController.current">Edit My Account</a></li>
+			<li><a href="@routes.MainController.dashboard">Dashboard</a></li>
 			<li class="divider"></li>
 			<li class="dropdown-header">@{current.email} (@current.name)</li>
 			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
