--- a/app/views/templates/public.scala.html
+++ b/app/views/templates/public.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(header: Html)(content: Html)
+@(title: String, homelink: Call = routes.MainController.base)(header: Html)(content: Html)
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +21,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Audience Extender</a>
+			<a class="navbar-brand" href="@homelink">Audience Extender</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			@header
