--- a/app/views/tos.scala.html
+++ b/app/views/tos.scala.html
@@ -1,2 +1,8 @@
-@templates.public("Terms of Service") { } {
+@(admin: Admin)
+@templates.public("Terms of Service", homelink = if(admin!=null)(routes.MainController.dashboard)else(routes.MainController.base)) {
+@if(admin!=null) {
+	@menu.public(admin)
+}
+}{
+<h2>Terms of Service</h2>
 }
