--- a/app/views/menu/logout.scala.html
+++ b/app/views/menu/logout.scala.html
@@ -1,11 +1,13 @@
-@(current: Admin)
+@(current: Admin, options: Html = Html(""))
 <ul class="nav navbar-nav navbar-right">
 	<li class="dropdown">
 		<a data-toggle="dropdown" class="dropdown-toggle" href="#"><span class="glyphicon glyphicon-user"></span> My Account <b class="caret"></b></a>
 		<ul class="dropdown-menu">
-			<li><a href="@routes.AdminController.current">Edit My Account</a></li>
-			<li class="divider"></li>
 			<li class="dropdown-header">@{current.email} (@current.name)</li>
+			<li class="divider"></li>
+			<li><a href="@routes.AdminController.current">Edit My Account</a></li>
+			@options
+			<li class="divider"></li>
 			<li><a href="@routes.MainController.logout()" class="navbar-link">Logout</a></li>
 		</ul>
 	</li>
