--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -2,7 +2,7 @@
 @templates.main("Dashboard") {
 @menu.admin("Dashboard")
 @menu.logout(current)
-@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/dashboard").url)
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/dashboard.audience").url)
 <script type="text/javascript">
 //<![CDATA[
 window.data = {};
@@ -13,8 +13,8 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 <div class="header">
 	<div class="container">
 		<ul class="nav nav-tabs">
-			<li><a href="#">Audiences</a></li>
-			<li class="active"><a href="#">Campaigns</a></li>
+			<li class="active"><a href="#">Audiences</a></li>
+			<li><a href="@routes.MainController.dashboardSelect("campaign")">Campaigns</a></li>
 		</ul>
 	</div>
 </div>
@@ -143,10 +143,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 			</div>
 			<div class="col-md-3">
 				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Campaign</button>
-				</p>
-				<p>
-					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
+					<button type="button" class="btn btn-default btn-lg btn-block btn-plus" data-bind="click: newaudience" data-toggle="modal" data-target="#editAudience"><span></span><span class="glyphicon glyphicon-plus-sign"></span> New Audience</button>
 				</p>
 				<p>
 					<button type="button" class="btn btn-default btn-lg btn-block btn-plus"><span></span><span class="glyphicon glyphicon-plus-sign"></span> Yield Maximiser</button>
@@ -164,10 +161,10 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Audience: <span data-bind="text: currentaudience.name"></span></h4>
+				<h4 class="modal-title">New/Edit Audience: <span data-bind="text: currentaudience().name"></span></h4>
 			</div>
 			<div class="modal-body">
-				<p class="h4"><a href="#" id="audiencename" data-bind="editable: currentaudience.name" data-type="text" data-pk="1" data-title="Enter Audience Name">Audience Name</a></p>
+				<p class="h4"><a href="#" id="audiencename" data-bind="editable: currentaudience().name" data-type="text" data-pk="1" data-title="Enter Audience Name">Audience Name</a></p>
 				<h3>Select Website</h3>
 				<div class="box-strips">
 					<div class="row">
