--- a/app/views/admins.scala.html
+++ b/app/views/admins.scala.html
@@ -2,7 +2,7 @@
 @templates.main("Admins") {
 @menu.admin("Admins")
 @menu.logout(current)
-@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/admins").url)
+@helper.requireJs(core = routes.WebJarAssets.requirejs.url, module = routes.Assets.at("javascripts/admins.js").url)
 <script type="text/javascript">
 //<![CDATA[
 window.data = {};
