--- a/app/views/dashboardaudience.scala.html
+++ b/app/views/dashboardaudience.scala.html
@@ -115,7 +115,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-				    @elements.pagination("datatablescroller")
+					@elements.pagination("datatablescroller")
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -138,7 +138,7 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 					</div>
 				</div>
 				<div class="row">
-				    @elements.pagination("datatablescroller")
+					@elements.pagination("datatablescroller")
 				</div>
 			</div>
 			<div class="col-md-3">
@@ -161,11 +161,10 @@ window.data.publishers = @{import play.api.libs.json._;import controllers.Publis
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-				<h4 class="modal-title">New/Edit Audience: <span data-bind="text: currentaudience().name"></span></h4>
+				<h4 class="modal-title">New/Edit Audience: <a href="#" id="audiencename" data-bind="editable: currentaudience().name" data-type="text" data-pk="1" data-title="Enter Audience Name">New Audience</a></h4>
 			</div>
 			<div class="modal-body">
-				<p class="h4"><a href="#" id="audiencename" data-bind="editable: currentaudience().name" data-type="text" data-pk="1" data-title="Enter Audience Name">Audience Name</a></p>
-				<h3>Select Website</h3>
+				<h3 class="m-top-null">Select Website</h3>
 				<div class="box-strips">
 					<div class="row">
 						<div class="col-md-2 text-center">
