Name of modal popup movet to the head

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -83,8 +83,8 @@ h3 {
 }
 
 .m-null {margin:0}
-.m-top-null {margin-top:0;}
-.m-btm-null {margin-bottom:0;}
+.m-null-top {margin-top:0;}
+.m-null-btm {margin-bottom:0;}
 .m-top {margin-top:15px;}
 .m-btm {margin-bottom:15px;}
 .m-top-btm {margin:15px 0;}
