--- a/app/views/templates/public.scala.html
+++ b/app/views/templates/public.scala.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>@title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("css/bootstrap.css"))">
+	<link rel="stylesheet" media="screen" href="@routes.MainController.minProdWebJarAssetsAt("css/bootstrap.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 	<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap-theme.css")">
 	<link rel="shortcut icon" href="@routes.Assets.at("images/favicon.ico")">
